--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,15 +1,15 @@
-name= "pastebin-worker"
+name= "pastebin"
 compatibility_date = "2023-11-28"
-account_id= "37d2a5b56518873c54dcdc0e1f96203c"
+account_id= "e2dd9771dd5ad7a0159c19759e815703"
 main = "src/index.ts"
 workers_dev = false
 
 vars = { ENVIRONMENT = "production" }
-route = { pattern = "paste.lius.me", custom_domain = true }
+route = { pattern = "paste.amcirccf.ggff.net", custom_domain = true }
 
 kv_namespaces = [
-  { binding = "PB", id = "092a5f3423374cf98709dd7b27b30adf" },
-  { binding = "PBIMGS", id ="3854f57b71db4f14a0b3ba4cc93b6b6a" }
+  { binding = "kvv", id = "d21fc4725b6047c38a82806ff36e82a1" },
+  { binding = "Imagine", id ="dbf2694cccb84591988a3ae7d5332032" }
 ]
 
 [site]
